# agentforge-policy-plugin

./: .gitignore  README.md  pyproject.toml
agentforge_policy/: __init__.py  dispatcher.py  plugin.json  plugin.py  routes.py
agentforge_policy/agents/budget_agent/: AGENT.md  runner.py
agentforge_policy/agents/low_risk_agent/: AGENT.md  runner.py
agentforge_policy/agents/no_completion_agent/: AGENT.md  runner.py
agentforge_policy/agents/risky_agent/: AGENT.md  runner.py
tests/: test_runners.py
